# whisper_agent

./: .gitignore  README.md  diagnose_alignment.py  main.py  pyproject.toml  run_in_venv.ps1  transcribe_ondemand.py
.github/: copilot-instructions.md
audio/: alignment.py  audio_utils.py  diarization.py  diarization_worker.py  gpu_check.py  gpu_utils.py  language_detection.py  model_selector.py  preprocessing.py  progress.py  register_speaker.py  speaker_db.py  speaker_resolver.py  transcription.py  transcription_core.py  transcription_runner.py  transcription_worker.py  vram.py
config/: language_models.py  settings.py
summarization/: model_selector.py  prompts.py  summary.py
tests/: test_audio_transcription.py  test_config_settings.py  test_cuda_compat.py  test_main_integration.py  test_summarization_summary.py  test_watcher_handler.py
watcher/: handler.py  watcher.py
whisper_agent/: main.py
